fixed spacing on the extension pop up

--- a/popup.css
+++ b/popup.css
@@ -21,9 +21,11 @@ a:focus {
 }
 
 .windowSpacer {
-	height: 5px;
+	height: 10px;
 }
-
+.window {
+	margin-bottom: 20px;
+}
 .container {
 	width: 270px;
 	height: 400px;
